--- a/idlmdsevent/idlmdsevent.vcproj
+++ b/idlmdsevent/idlmdsevent.vcproj
@@ -246,7 +246,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="odbc32.lib odbccp32.lib $(IDL_DIR)\bin\bin.x86\idl.lib"
+				AdditionalDependencies="&quot;$(IDL_DIR)\bin\bin.x86\idl.lib&quot;"
 				LinkIncremental="1"
 				ModuleDefinitionFile="$(InputDir)$(InputName).def"
 				ProgramDatabaseFile=""
