--- a/javadispatcher/javadispatcher.vcproj
+++ b/javadispatcher/javadispatcher.vcproj
@@ -4,6 +4,7 @@
 	Version="9.00"
 	Name="javadispatcher"
 	ProjectGUID="{9E84A1A9-DED1-4AD8-A654-A60249DFEEAE}"
+	RootNamespace="javadispatcher"
 	Keyword="MakeFileProj"
 	TargetFrameworkVersion="131072"
 	>
@@ -42,29 +43,6 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release|Win32"
-			OutputDirectory=".\Release"
-			IntermediateDirectory=".\Release"
-			ConfigurationType="0"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
-			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="false"
-			>
-			<Tool
-				Name="VCNMakeTool"
-				BuildCommandLine="nmake /f &quot;javadispatcher.mak&quot;"
-				ReBuildCommandLine="nmake /f &quot;javadispatcher.mak&quot; /a"
-				CleanCommandLine="rm *.class"
-				Output="..\java\classes\jDispatcher.jar"
-				PreprocessorDefinitions=""
-				IncludeSearchPath=""
-				ForcedIncludes=""
-				AssemblySearchPath=""
-				ForcedUsingAssemblies=""
-				CompileAsManaged=""
-			/>
-		</Configuration>
-		<Configuration
 			Name="Debug|x64"
 			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
@@ -79,6 +57,29 @@
 				ReBuildCommandLine="nmake /f &quot;javadispatcher.mak&quot; /a"
 				CleanCommandLine=""
 				Output="..\java\classes\MDSplus.jar"
+				PreprocessorDefinitions=""
+				IncludeSearchPath=""
+				ForcedIncludes=""
+				AssemblySearchPath=""
+				ForcedUsingAssemblies=""
+				CompileAsManaged=""
+			/>
+		</Configuration>
+		<Configuration
+			Name="Release|Win32"
+			OutputDirectory=".\Release"
+			IntermediateDirectory=".\Release"
+			ConfigurationType="0"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
+			UseOfMFC="0"
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
+			<Tool
+				Name="VCNMakeTool"
+				BuildCommandLine="nmake /f &quot;javadispatcher.mak&quot;"
+				ReBuildCommandLine="nmake /f &quot;javadispatcher.mak&quot; /a"
+				CleanCommandLine="delete *.class"
+				Output="..\java\classes\jDispatcher.jar"
 				PreprocessorDefinitions=""
 				IncludeSearchPath=""
 				ForcedIncludes=""
