--- a/javadispatcher/javadispatcher.vcproj
+++ b/javadispatcher/javadispatcher.vcproj
@@ -78,7 +78,7 @@
 				Name="VCNMakeTool"
 				BuildCommandLine="nmake /f &quot;javadispatcher.mak&quot;"
 				ReBuildCommandLine="nmake /f &quot;javadispatcher.mak&quot; /a"
-				CleanCommandLine="delete *.class"
+				CleanCommandLine="del *.class"
 				Output="..\java\classes\jDispatcher.jar"
 				PreprocessorDefinitions=""
 				IncludeSearchPath=""
@@ -101,7 +101,7 @@
 				Name="VCNMakeTool"
 				BuildCommandLine="nmake /f &quot;javadispatcher.mak&quot;"
 				ReBuildCommandLine="nmake /f &quot;javadispatcher.mak&quot; /a"
-				CleanCommandLine="rm *.class"
+				CleanCommandLine="del *.class"
 				Output="..\java\classes\jDispatcher.jar"
 				PreprocessorDefinitions=""
 				IncludeSearchPath=""
