Added CAEN DT5720 Device support

--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -120,8 +120,8 @@ EDA3VmeConfigSetup.java\
 MCUSetup.java\
 SIS3820Setup.java\
 FEMTOSetup.java\
+CAENDT5720Setup.java\
 RFXVConfigSetup.java
-
 
 all: @MAKEJAVADIR@ @MAKEJAVADIR@classes \
      @MAKEJAVADIR@classes/jDevices.jar
