--- a/javadevices/javadevices.vcproj
+++ b/javadevices/javadevices.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="javadevices"
 	ProjectGUID="{FFDA5357-22C9-497B-B85C-61DF99C0F4F8}"
 	Keyword="MakeFileProj"
@@ -567,6 +567,10 @@
 		</File>
 		<File
 			RelativePath="Aurora14Setup.java"
+			>
+		</File>
+		<File
+			RelativePath=".\CAENDT5720Setup.java"
 			>
 		</File>
 		<File
