Support for multiple parameters

--- a/javatraverser/Makefile.in
+++ b/javatraverser/Makefile.in
@@ -56,6 +56,11 @@ DeviceWave.java\
 DeviceWaveDisplay.java\
 DeviceWaveDisplayCustomizer.java\
 DeviceWaveDisplayBeanInfo.java\
+DeviceMultiComponent.java\
+DeviceParameters.java\
+DeviceParametersBeanInfo.java\
+DeviceWaveParameters.java\
+DeviceWaveParametersBeanInfo.java\
 DimensionData.java\
 DispatchData.java\
 DispatchEditor.java\
