--- a/mdstcpip/Makefile.in
+++ b/mdstcpip/Makefile.in
@@ -4,9 +4,9 @@ LD=@LD@
 
 COMPRESSION_SOURCES=adler32.c compress.c deflate.c infblock.c infcodes.c\
 inffast.c inflate.c inftrees.c infutil.c trees.c uncompr.c zutil.c
+COMPRESSION_OBJECTS = $(COMPRESSION_SOURCES:.c=.o)
+
 COMPRESSION_SWITCH=
-#COMPRESS_SOURCES=
-#COMPRESSION_SWITCH=-DNOCOMPRESSION
 
 top_srcdir=@top_srcdir@
 RM=$(top_srcdir)/devscripts/rm_if
@@ -23,26 +23,70 @@ else
 	modules = @MAKESHLIBDIR@libMdsIpShr@SHARETYPEMOD@ 
 endif
 
-SOURCES = \
-	mdsipshr.c mdsiputil.c vmshpwd.c mdsip_socket_io.c mdsip_parallel.c $(COMPRESSION_SOURCES)
+ifeq "@MDSIP_CONNECTIONS@" "yes"
+MDSIP_CONNECTIONS = yes
+LIB_SOURCES = MdsValue.c MdsPut.c MdsOpen.c MdsClose.c MdsSetDefault.c MdsLogin.c MdsEventAst.c\
+	  MdsEventCan.c MdsDispatchEvent.c MdsSetCompression.c FreeMessage.c \
+	  IdlApi.c SendMdsMsg.c GetMdsMsg.c FlipData.c FlipHeader.c GetAnswerInfo.c ClientType.c\
+          MakeDescrip.c LoadIo.c vmshpwd.c ArgLen.c GetSetSettings.c DoMessage.c  \
+	  LockAsts.c Connections.c MdsIpFree.c SendArg.c ConnectToMds.c DisconnectFromMds.c CloseConnection.c
 
-COMPRESSION_OBJECTS = $(COMPRESSION_SOURCES:.c=.o)
-OBJECTS = $(SOURCES:.c=.o)
+LIB_OBJECTS = $(LIB_SOURCES:.c=.o)
+
+SERVER_LIB_SOURCES = ProcessMessage.c RemoveConnection.c CheckClient.c 
+SERVER_LIB_OBJECTS = $(SERVER_LIB_SOURCES:.c=.o)
+SERVER_SOURCES = mdsip.c ParseCommand.c 
+SERVER_OBJECTS = $(SERVER_SOURCES:.c=.o)
+TCP_SOURCES = IoRoutinesTcp.c
+TCP_OBJECTS = $(TCP_SOURCES:.c=.o)
+TUNNEL_SOURCES = IoRoutinesTunnel.c
+TUNNEL_OBJECTS = $(TUNNEL_SOURCES:.c=.o)
+CLEAN_OBJECTS = $(COMPRESSION_OBJECTS) $(LIB_OBJECTS) $(TUNNEL_OBJECTS) $(TCP_OBJECTS) $(SERVER_LIB_OBJECTS) $(SERVER_OBJECTS)
+ALL_SOURCES = $(LIB_SOURCES) $(TUNNEL_SOURCES) $(TCP_SOURCES) $(SERVER_LIB_SOURCES) $(SERVER_SOURCES)
+MdsIpSrvShr = @MAKESHLIBDIR@libMdsIpSrvShr@SHARETYPE@
+MdsIpTunnel = @MAKESHLIBDIR@libMdsIpTunnel@SHARETYPE@
+MdsIpTCP    = @MAKESHLIBDIR@libMdsIpTCP@SHARETYPE@
+MdsIpSSH    = @MAKESHLIBDIR@libMdsIpSSH@SHARETYPE@
+MDSIP_CLIENT_SSH = @MAKEBINDIR@mdsip-client-ssh
+MDSIP_SERVER_SSH = @MAKEBINDIR@mdsip-server-ssh
+
+else
+
+LIB_SOURCES = mdsipshr.c mdsiputil.c vmshpwd.c mdsip_socket_io.c mdsip_parallel.c
+LIB_OBJECTS = $(LIB_SOURCES:.c=.o)
+SERVER_SOURCES = mdsip_u.c
+SERVER_OBJECTS = $(SERVER_SOURCES:.c=.o)
+CLEAN_OBJECTS = $(COMPRESSION_OBJECTS) $(LIB_OBJECTS) $(SERVER_OBJECTS)
+ALL_SOURCES = $(LIB_SOURCES) $(SERVER_SOURCES)
+MDSIP_UTIL = @MAKELIBDIR@libMdsIpUtil.a
+
+endif
+
 EXPORTS = mdsipshr.export
 
 all : @MAKESHLIBDIR@libMdsIpShr@SHARETYPE@ \
       $(modules) \
+      $(MdsIpSrvShr) \
+      $(MdsIpTunnel) \
+      $(MdsIpTCP) \
+      $(MdsIpSSH) \
+      $(MDSIP_CLIENT_SSH) \
+      $(MDSIP_SERVER_SSH) \
       @MAKEBINDIR@ @MAKELIBDIR@ @MAKEETCDIR@ \
-      @MAKEBINDIR@mdsiptest @MAKEBINDIR@mdsip \
-      @MAKEBINDIR@mdsipd @MAKEBINDIR@mdsip_server @MAKEETCDIR@mdsip.hosts \
+      @MAKEBINDIR@mdsiptest \
+      @MAKEBINDIR@mdsip \
+      @MAKEBINDIR@mdsipd \
+      @MAKEBINDIR@mdsip_server \
+      @MAKEETCDIR@mdsip.hosts \
       @MAKEBINDIR@mkdirhier \
-      @MAKELIBDIR@libMdsIpShr.a @MAKELIBDIR@libMdsIpUtil.a 
+      @MAKELIBDIR@libMdsIpShr.a \
+      $(MDSIP_UTIL)
 
 depend:
-	@makedepend -- $(CFLAGS) -- $(SOURCES) mdsip_u.c
+	@makedepend -- $(CFLAGS) -- $(ALL_SOURCES)
 
 clean :
-	@ $(RM) $(OBJECTS) $(COMPRESSION_OBJECTS)
+	@ $(RM) $(CLEAN_OBJECTS)
 	@ $(RM) so_locations
 	@ $(RM) @MAKESHLIBDIR@libMdsIpShr@SHARETYPE@
 	@ $(RM) @MAKELIBDIR@libMdsIpShr.a
@@ -53,6 +97,14 @@ clean :
 	@ $(RM) @MAKEBINDIR@mdsip_server
 	@ $(RM) @MAKEBINDIR@mkdirhier
 	@ $(RM) @MAKEETCDIR@mdsip.hosts
+        ifdef MDSIP_CONNECTIONS
+	@ $(RM) @MAKELIBDIR@libMdsIpSrvShr@SHARETYPE@
+	@ $(RM) @MAKELIBDIR@libMdsIpTunnel@SHARETYPE@
+	@ $(RM) @MAKELIBDIR@libMdsIpTCP@SHARETYPE@
+	@ $(RM) @MAKELIBDIR@libMdsIpSSH@SHARETYPE@
+	@ $(RM) @MAKEBINDIR@mdsip-client-ssh
+	@ $(RM) @MAKEBINDIR@mdsip-server-ssh
+        endif
 
 install:
 	if [ ! -d @libdir@ ] ; then \
@@ -69,13 +121,23 @@ install:
 	$(INSTALL) -m 755  @MAKEBINDIR@mkdirhier @bindir@
 	if test "@SHARETYPE@" != ".a" ; then \
 		$(INSTALL) -m 644  @MAKELIBDIR@libMdsIpShr.a @libdir@; \
+ifndef MDSIP_CONNECTIONS
 		$(INSTALL) -m 644  @MAKELIBDIR@libMdsIpUtil.a @libdir@; \
+endi
 	fi;
 	if [ ! -d $(exec_prefix)/etc ] ; then \
                 @MAKEBINDIR@mkdirhier $(exec_prefix)/etc; \
                 chmod 755 $(exec_prefix)/etc; \
         fi;
 	$(INSTALL) -m 755  mdsip.hosts $(exec_prefix)/etc
+        ifdef MDSIP_CONNECTIONS
+		$(INSTALL) -m 755 @MAKESHLIBDIR@libMdsIpSrvShr@SHARETYPE@ @libdir@
+		$(INSTALL) -m 755 @MAKESHLIBDIR@libMdsIpTunnel@SHARETYPE@ @libdir@
+		$(INSTALL) -m 755 @MAKESHLIBDIR@libMdsIpTCP@SHARETYPE@ @libdir@
+		$(INSTALL) -m 755 @MAKESHLIBDIR@libMdsIpSSH@SHARETYPE@ &libdir@
+		$(INSTALL) -m 755 @MAKEBINDIR@mdsip-client-ssh @bindir@
+		$(INSTALL) -m 755 @MAKEBINDIR@mdsip-server-ssh @bindir@
+        endif
 
 @MAKEBINDIR@ :
 	mkdir @MAKEBINDIR@
@@ -83,8 +145,13 @@ install:
 @MAKEBINDIR@mdsiptest : t.c @MAKELIBDIR@libMdsIpShr@SHARETYPE@
 	$(CC) -o $@ $(CFLAGS) @CC_LDFLAGS@ t.c -L@MAKESHLIBDIR@ -lMdsIpShr $(LIBS)
 
-@MAKEBINDIR@mdsip : mdsip_u.c
-	$(CC) -o $@ $(CFLAGS) @CC_LDFLAGS@ mdsip_u.c -L@MAKESHLIBDIR@ -lMdsIpShr -lMdsShr -lTreeShr -lTdiShr $(LIBS)
+ifdef MDSIP_CONNECTIONS
+@MAKEBINDIR@mdsip : $(SERVER_OBJECTS)
+	$(CC) -o $@ $(CFLAGS) @CC_LDFLAGS@ $(SERVER_OBJECTS) -L@MAKESHLIBDIR@ -lMdsIpSrvShr -lMdsIpShr -lMdsShr -lTreeShr -lTdiShr $(LIBS)
+else
+@MAKEBINDIR@mdsip : $(SERVER_OBJECTS)
+	$(CC) -o $@ $(CFLAGS) @CC_LDFLAGS@ $(SERVER_OBJECTS) -L@MAKESHLIBDIR@ -lMdsIpShr -lMdsShr -lTreeShr -lTdiShr $(LIBS)
+endif
 
 @MAKEBINDIR@mdsipd : mdsipd
 	cp mdsipd @MAKEBINDIR@mdsipd
@@ -92,19 +159,23 @@ install:
 @MAKEBINDIR@mdsip_server : mdsip_server
 	cp mdsip_server @MAKEBINDIR@mdsip_server
 
-@MAKESHLIBDIR@libMdsIpShr@SHARETYPE@ : $(OBJECTS)
-	$(LD) -o $@ @LINKSHARED@ $(OBJECTS) $(LIBS) 
-
-@MAKELIBDIR@libMdsIpShr.a : $(OBJECTS)
-	$(AR) -cr $@ $(OBJECTS)
+ifdef MDSIP_CONNECTIONS
+@MAKESHLIBDIR@libMdsIpShr@SHARETYPE@ : $(LIB_OBJECTS) $(COMPRESSION_OBJECTS)
+	$(LD) -o $@ @LINKSHARED@ $(LIB_OBJECTS) $(COMPRESSION_OBJECTS) -L@MAKESHLIBDIR@ -lMdsShr $(LIBS) 
+else
+@MAKESHLIBDIR@libMdsIpShr@SHARETYPE@ : $(LIB_OBJECTS) $(COMPRESSION_OBJECTS)
+	$(LD) -o $@ @LINKSHARED@ $(LIB_OBJECTS) $(COMPRESSION_OBJECTS) $(LIBS) 
+endif
+@MAKELIBDIR@libMdsIpShr.a : $(LIB_OBJECTS)
+	$(AR) -cr $@ $(LIB_OBJECTS)
 	@RANLIB@ $@
 
 ifdef modules
-@MAKESHLIBDIR@libMdsIpShr@SHARETYPEMOD@ : $(OBJECTS)
+@MAKESHLIBDIR@libMdsIpShr@SHARETYPEMOD@ : $(LIB_OBJECTS) $(COMPRESSION_OBJECTS)
 	$(LD) -o $@ @LINKMODULE@ $(OBJECTS) $(LIBS) 
 endif
 
-@MAKELIBDIR@libMdsIpUtil.a : mdsiputil.o mdsip_socket_io.o mdsip_parallel.o $(COMPRESSION_OBJECTS)
+$(MDSIP_UTIL) : mdsiputil.o mdsip_socket_io.o mdsip_parallel.o $(COMPRESSION_OBJECTS)
 	$(AR) -cr $@ mdsiputil.o mdsip_socket_io.o mdsip_parallel.o $(COMPRESSION_OBJECTS)
 	@RANLIB@ $@
 
@@ -119,3 +190,22 @@ endif
 
 @MAKEBINDIR@mkdirhier : mkdirhier
 	cp mkdirhier @MAKEBINDIR@mkdirhier
+
+@MAKESHLIBDIR@libMdsIpSrvShr@SHARETYPE@ : $(SERVER_LIB_OBJECTS)
+	$(LD) -o $@ @LINKSHARED@ $(SERVER_LIB_OBJECTS) -L@MAKESHLIBDIR@ -lMdsIpShr -lMdsShr -lTreeShr -lTdiShr $(LIBS)
+
+@MAKESHLIBDIR@libMdsIpTunnel@SHARETYPE@ : $(TUNNEL_OBJECTS)
+	$(LD) -o $@ @LINKSHARED@ $(TUNNEL_OBJECTS) -L@MAKESHLIBDIR@ -lMdsIpShr $(LIBS)
+
+@MAKESHLIBDIR@libMdsIpTCP@SHARETYPE@ : $(TCP_OBJECTS)
+	$(LD) -o $@ @LINKSHARED@ $(TCP_OBJECTS) -L@MAKESHLIBDIR@ -lMdsIpShr $(LIBS)
+
+@MAKESHLIBDIR@libMdsIpSSH@SHARETYPE@ :
+	ln -sf libMdsIpTunnel@SHARETYPE@ $@
+
+@MAKEBINDIR@mdsip-client-ssh : mdsip-client-ssh
+	cp mdsip-client-ssh $@
+
+@MAKEBINDIR@mdsip-server-ssh : mdsip-server-ssh
+	cp mdsip-server-ssh $@
+
