Fix compiler and linker switches to work with 64-bit

--- a/mdsip_xio/Makefile.in
+++ b/mdsip_xio/Makefile.in
@@ -148,7 +148,7 @@ install:
 
 
 @MAKESHLIBDIR@libMdsIpShr@SHARETYPE@ : $(CLIENT_OBJECTS)
-	$(LD) -o $@ @LINKSHARED@ $(CLIENT_OBJECTS) $(LDFLAGS)
+	$(GLOBUS_LD) -o $@ @LINKSHARED@ $(CLIENT_OBJECTS) $(LDFLAGS)
 
 @MAKEBINDIR@mdsip : $(SERVER_OBJECTS)
 	$(CC) -o $@ @CC_LDFLAGS@ $(SERVER_OBJECTS) $(LDFLAGS) -L@MAKESHLIBDIR@ -lMdsIpShr -lMdsShr -lTreeShr -lTdiShr
@@ -174,7 +174,7 @@ makefile-header:
 
 ifdef modules
 @MAKESHLIBDIR@libMdsIpShr@SHARETYPEMOD@ : $(CLIENT_OBJECTS)
-	$(LD) -o $@ @LINKMODULE@ $(CLIENT_OBJECTS) $(LIBS) 
+	$(GLOBUS_LD) -o $@ @LINKMODULE@ $(CLIENT_OBJECTS) $(LIBS) 
 endif
 
 @MAKELIBDIR@libMdsIpUtil.a : $(UTIL_OBJECTS)
