--- a/tdic/tdishrext.vcproj
+++ b/tdic/tdishrext.vcproj
@@ -385,6 +385,10 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl"
 			>
+			<File
+				RelativePath="..\include\config.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
